--- a/BTVN__buoi-4/assets/style.css
+++ b/BTVN__buoi-4/assets/style.css
@@ -59,7 +59,6 @@ h3>strong {
     font-size: 14px;
 }
 
-
 p {
     margin-bottom: 5px;
     color: #333;
@@ -226,10 +225,12 @@ p a:hover {
 }
 
 .ft-product__portfolio {
-    width: max-content;
-    margin-top: 20px;
-    padding: 20px;
     border-top: 1px solid rgba(0, 0, 0, 0.06);
+    margin: 20px 90px 0;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     text-align: center;
 }
 
