--- a/BTVN__buoi-4/assets/style.css
+++ b/BTVN__buoi-4/assets/style.css
@@ -226,8 +226,7 @@ p a:hover {
 }
 
 .ft-product__portfolio {
-    width: max-content;
-    margin-top: 20px;
+    margin: 20px 90px 0;
     padding: 20px;
     border-top: 1px solid rgba(0, 0, 0, 0.06);
     text-align: center;
